# smart-interview-guideline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.yaml  gunicorn.config.py  pyproject.toml
.certs/: .gitkeep
app/: app.py  config.py
app/models/: __init__.py  example.py
app/modules/account/: __init__.py  models.py  profile_services.py  profile_views.py  urls.py  views.py
app/modules/admin/: __init__.py  models.py  urls.py  views.py
app/modules/analysis/: __init__.py  models.py  services.py  urls.py  views.py
app/modules/company/: __init__.py  models.py  urls.py  views.py
app/modules/contribution/: __init__.py  models.py  urls.py  views.py
app/modules/preparation/: __init__.py  models.py  services.py  urls.py  views.py
app/modules/questions/: __init__.py  models.py  (+3 more)
app/utils/: auth.py  db.py  llm_language.py  openai_client.py
dev-docs/: EPIC1_SUMMARY.md  QUICKSTART_EPIC1.md  analysis.md  epic1-implementation-guide.md  mvp-srs.md  mvp-user-stories.md  question-knowledge-linking-guide.md  question-knowledge-warehouse-srs.md  question-knowledge-warehouse-user-stories.md
dockerfiles/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  dev-frontend.Dockerfile  dev.Dockerfile  entrypoint.backend.sh  entrypoint.frontend.sh  nginx-no-ssl.conf  nginx.conf
docs/: admin-setup.md
scripts/: create_admin.py  migrate_add_is_admin.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx  router.tsx
(+76 files in other folders)
